# Gaghiel-FanCtrl

./: CMakeLists.txt  README.md  main.cpp
